tests/negative/import_errors/missing_import.nano
# Expected Error: Module not found

import nonexistent_module  # Error: module does not exist

fn main() -> int {
    return 0
}

shadow main {
    assert (== (main) 0)
}
